--- a/package.json
+++ b/package.json
@@ -1,22 +1,18 @@
 {
-  "name": "ElectronHelloWorld",
+  "name": "ElectronAlarm",
   "version": "1.0.0",
-  "description": "A minimal Electron application",
-  "main": "main.js",
+  "description": "A simple alarm application created using ElectronJS",
+  "main": "./js/main.js",
   "scripts": {
     "start": "electron ."
   },
-  "repository": "https://github.com/Cursi/ElectronHelloWorld",
-  "keywords": [
-    "Electron",
-    "quick",
-    "start",
-    "tutorial",
-    "demo"
-  ],
-  "author": "GitHub",
+  "repository": "https://github.com/Cursi/ElectronAlarm",
+  "author": "Cursi",
   "license": "CC0-1.0",
   "devDependencies": {
     "electron": "~1.7.8"
+  },
+  "dependencies": {
+    "jquery": "^3.3.1"
   }
 }
