--- a/package.json
+++ b/package.json
@@ -3,16 +3,23 @@
   "version": "1.0.0",
   "description": "A simple alarm application created using ElectronJS",
   "main": "./js/main.js",
-  "scripts": {
-    "start": "electron ."
+  "scripts":
+  {
+    "start": "electron .",
+    "package-mac": "electron-packager . --overwrite --platform=darwin --arch=x64 --icon=assets/icons/mac/icon.icns --prune=true --out=release-builds",
+    "package-win": "electron-packager . ElectronAlarm --overwrite --asar --platform=win32 --arch=ia32 --icon=assets/icons/win/icon.ico --prune=true --out=release-builds --version-string.CompanyName=CR --version-string.FileDescription=CR --version-string.ProductName=\"Electron Alarm\"",
+    "package-linux": "electron-packager . ElectronAlarm --overwrite --asar --platform=linux --arch=x64 --icon=assets/icons/png/icon.png --prune=true --out=release-builds"
   },
   "repository": "https://github.com/Cursi/ElectronAlarm",
   "author": "Cursi",
   "license": "CC0-1.0",
-  "devDependencies": {
-    "electron": "~1.7.8"
+  "devDependencies":
+  {
+    "electron": "~1.7.8",
+    "electron-packager": "^11.0.0"
   },
-  "dependencies": {
+  "dependencies":
+  {
     "jquery": "^3.3.1"
   }
 }
